* Fixed I18n load_path [Thanks to Pirj]
* Updated column proprieties for DataMapper
* Now Mounter accept namespaced applications [Thanks to Mcmire]
* Updated ar:translate to be more compat with AS 3.+
* remove strict_format in layouts to work with Sinatra as a standalone
* Change Padrino Admin to generate model in own app, not default generated app.

== 0.9.19

* Sinatra 1.1 compat
* Fixed destroy admin/app/page [Thanks to Sob]
* Fixed couchrest dependencies [Thanks to 21studios]
* Added a basic index file [Thanks to 21studios]
* Now Admin password are undecryptable [Thanks to Sob]
* Arrayify keys for invalidation in padrino-cache
* Fixed few typos errors [Thanks to Philtr]
* Fix conflict on seeds.rb when generating admin [Thanks to Spllr]
* Correct path in spec [Thanks to Spllr]
* Bypass admin login in development
* Norwegian translation [Thanks to Fossmo]
* Updated generator for new rspec version [Thanks to Rosstimson]
* Updated generator to work with legacy rspec version
* Fixed issue with views folder not being generated in projects
* Fixed the listing headers of admin pages, now is plural [Thanks to Rosstimson]
* Fixed model migration removal [Thanks to Sob]
* Updated plugins to pull using https [Thanks to Sob]

== 0.9.18

* Updated to use latest http_router
* Fix undefined method crypted_password when using Postgresql + Sequel [Thanks to Commuter]
* Preserve params for after use by a before filter
* Fix const scope for Rack::Mime [Thanks to spllr]

== 0.9.17

* Fixed a problem with routing of “/”
* Added utf-8 feature in forms using utf8/_e/snowman tag

== 0.9.16

* Fixed problems with admin
* Now only AS > 3.0
* Added padrino-cache
* Added redis backend for padrino-cache
* Added dom helpers [Thanks to nu7hatch]
* Added regex support for route portions
* Update rspec generation to use let() [Thanks to rbxbx]
* Added mysql2 support for activerecord [Thanks to kyanagi]
* Fixed riot test helper generation
* Added concise routing support